--- a/source/_includes/header.html
+++ b/source/_includes/header.html
@@ -22,7 +22,7 @@
 		<a class="github" href="https://github.com/{{ site.github_user }}" title="GitHub">GitHub</a>
 		{% endif %}
 		{% if site.linkedin_user %}
-		<a class="linkedin" href="http://www.linkedin.com/in/{{ site.linkedin_user }}">LinkedIn</a>
+		<a class="linkedin" href="http://www.linkedin.com/in/{{ site.linkedin_user }}" title="LinkedIn">LinkedIn</a>
 		{% endif %}
 		{% if site.pinterest_user %}
 		<a class="pinterest" href="https://pinterest.com/{{ site.pinterest_user }}" title="Pinterest">Pinterest</a>
