--- a/source/_includes/header.html
+++ b/source/_includes/header.html
@@ -26,6 +26,9 @@
 		{% if site.coderwall_user %}
 		<a class="coderwall" href="https://coderwall.com/{{ site.coderwall_user }}" title="Coderwall">Coderwall</a>
 		{% endif %}
+		{% if site.stackoverflow_user %}
+		<a class="stackoverflow" href="https://stackoverflow.com/{{ site.stackoverflow_user }}" title="StackOverflow">StackOverflow</a>
+		{% endif %}
 		{% if site.linkedin_user %}
 		<a class="linkedin" href="http://www.linkedin.com/in/{{ site.linkedin_user }}" title="LinkedIn">LinkedIn</a>
 		{% endif %}
